--- a/SocketTest_walkieTalkie/SocketTest_walkieTalkie/Info.plist
+++ b/SocketTest_walkieTalkie/SocketTest_walkieTalkie/Info.plist
@@ -22,6 +22,8 @@
 	<string>1.2.2</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app needs the permission to use your photo library so that you can share your contents with others</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Znikomit.otf</string>
